force-app/main/default/objects/Account/fields/EDomain__c.field-meta.xml
<CustomField>
    <fullName>EDomain__c</fullName>
    <label>EDomain</label>
    <length>100</length>
    <type>Text</type>
</CustomField>