force-app/main/default/objects/Account/fields/Enrollment_Year__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Year__c</fullName>
    <label>Enrollment Year</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2010</fullName>
            </value>
            <value>
                <fullName>2011</fullName>
            </value>
            <value>
                <fullName>2012</fullName>
            </value>
            <value>
                <fullName>2013</fullName>
            </value>
            <value>
                <fullName>2014</fullName>
            </value>
            <value>
                <fullName>2015</fullName>
            </value>
            <value>
                <fullName>2016</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>