force-app/main/default/objects/Account/recordTypes/For_Person_Account.recordType-meta.xml
<RecordType>
    <fullName>For_Person_Account</fullName>
    <active>true</active>
    <description>Creating a new record type to enable person account</description>
    <label>For Person Account</label>
</RecordType>